added contact-us and success page

--- a/ExpressJS-project/views/add-product.html
+++ b/ExpressJS-project/views/add-product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
+    <link href="/css/shop.css" rel="stylesheet">
     <link href="/css/add-product.css" rel="stylesheet">
 </head>
 <body>
@@ -12,6 +13,7 @@
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/shop">Shop</a></li>
                 <li class="main-header__item"><a href="/admin/add-product" class="active">Add Product</a></li>
+                <li class="main-header__item"><a href="/shop/contactus">Contact Us</a></li>
             </ul>
         </nav>
     </header>
