--- a/ExpressJS-project/views/shop.html
+++ b/ExpressJS-project/views/shop.html
@@ -12,6 +12,7 @@
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/shop" class="active">Shop</a></li>
                 <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/shop/contactus">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -19,7 +20,6 @@
     <main>
         <h1>My Product</h1>
         <p>List of all the Products:</p>
-
     </main>
 </body>
 </html>
