--- a/ExpressJS-project/views/success.html
+++ b/ExpressJS-project/views/success.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Success</title>
     <link href="/css/shop.css" rel="stylesheet">
+    <link href="/css/add-product.css" rel="stylesheet">
 </head>
 <body>
     <header class="main-header">
@@ -17,8 +18,7 @@
         </nav>
     </header>
     <main>
-        <h1>Error 404: Page not found</h1>
+        <h1>Form successfuly filled</h1>
     </main>
-    
 </body>
 </html>
