--- a/Products Express App/views/shop/product-details.ejs
+++ b/Products Express App/views/shop/product-details.ejs
@@ -7,7 +7,7 @@
     <h1><%=product.title%></h1>
     <hr>
     <img src="<%=product.imageUrl%>" alt="<%=product.title%>">
-    <h1><%= product.price %></h1>
+    <h1>Rs. <%= product.price %></h1>
     <h1><%= product.description %></h1>
     <%- include('../includes/addToCart.ejs') %>
 </main>
