--- a/Products Express App/views/shop/product-details.ejs
+++ b/Products Express App/views/shop/product-details.ejs
@@ -6,7 +6,9 @@
 <main class="centered">
     <h1><%=product.title%></h1>
     <hr>
-    <img src="<%=product.imageUrl%>" alt="<%=product.title%>">
+    <div class="image">
+        <img src="<%=product.imageUrl%>" alt="<%=product.title%>">
+    </div>
     <h1>Rs. <%= product.price %></h1>
     <h1><%= product.description %></h1>
     <%- include('../includes/addToCart.ejs') %>
